--- a/src/index.css
+++ b/src/index.css
@@ -15,20 +15,31 @@
     @apply font-Courier font-bold text-2xl text-white;
   }
 
-  .Text {
-    @apply font-Courier font-bold text-xl text-white;
+  .TextLight {
+    @apply font-Courier font-bold text-xl text-beige;
+  }
+  .TextDark {
+    @apply font-Courier font-bold text-xl text-blue;
   }
 
   .textBox {
-    @apply flex flex-col items-center w-full mt-24 gap-4;
+    @apply flex flex-col items-center w-full mt-28 gap-4 mx-5 mb-4 z-30 relative;
   }
 
   .outerBox {
-    @apply bg-beige border-8 border-blue max-w-[1000px] w-full mx-14 mt-[-150px] z-0 p-4;
+    @apply bg-beige border-8 border-blue max-w-[1000px] w-full mt-[-150px] px-9;
   }
 
   .textDecoration {
     @apply w-full z-10 relative;
+  }
+
+  .combatFrame {
+    @apply border-8 border-spacing-5;
+  }
+
+  .icon {
+    @apply bg-blue border-2 border-beige rounded-2xl p-2 w-[60px] bg-opacity-60;
   }
 }
 
