--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .button {
-    @apply border-2 border-black px-4 py-1 cursor-pointer font-uncial text-2xl;
+    @apply border-2 border-blue px-4 py-1 cursor-pointer font-uncial text-2xl text-blue;
   }
 
   .button2 {
@@ -12,7 +12,7 @@
   }
 
   .Headline {
-    @apply font-Courier font-bold text-2xl text-white;
+    @apply font-Courier font-bold text-xl lg:text-2xl text-white;
   }
 
   .TextLight {
@@ -23,11 +23,11 @@
   }
 
   .textBox {
-    @apply flex flex-col items-center w-full mt-28 gap-4 mx-5 mb-4 z-30 relative;
+    @apply flex flex-col items-center w-full mt-5 gap-4 mx-5 mb-4 z-30 relative;
   }
 
   .outerBox {
-    @apply bg-beige border-8 border-blue max-w-[1000px] w-full mt-[-150px] px-9;
+    @apply bg-beige border-8 border-blue max-w-[1000px] w-full  px-9;
   }
 
   .textDecoration {
