--- a/src/index.css
+++ b/src/index.css
@@ -4,34 +4,30 @@
 
 @layer components {
   .button {
-    @apply border-2 border-blue px-4 py-1 cursor-pointer font-uncial text-2xl text-blue;
+    @apply border-2 border-blue px-4 py-1 cursor-pointer font-uncial text-xs lg:text-2xl text-blue;
   }
 
   .button2 {
-    @apply border-2 border-beige px-4 py-1 cursor-pointer font-uncial text-2xl text-beige;
+    @apply border-2 border-beige px-4 py-1 cursor-pointer font-uncial text-xs lg:text-2xl text-beige;
   }
 
   .Headline {
-    @apply font-Courier font-bold text-xl lg:text-2xl text-white;
+    @apply font-Courier font-bold text-sm md:text-xl lg:text-2xl text-white;
   }
 
   .TextLight {
-    @apply font-Courier font-bold text-xl text-beige;
+    @apply font-Courier font-bold text-xs lg:text-xl text-beige;
   }
   .TextDark {
-    @apply font-Courier font-bold text-xl text-blue;
+    @apply font-Courier font-bold text-xs lg:text-xl text-blue;
   }
 
   .textBox {
-    @apply flex flex-col items-center w-full mt-5 gap-4 mx-5 mb-4 z-30 relative;
+    @apply flex flex-col items-center w-full mt-5 gap-4  mb-4 z-30 relative;
   }
 
   .outerBox {
-    @apply bg-beige border-8 border-blue max-w-[1000px] w-full  px-9;
-  }
-
-  .textDecoration {
-    @apply w-full z-10 relative;
+    @apply bg-beige border-4  lg:border-8 border-blue max-w-[1000px] w-full px-2 lg:px-9;
   }
 
   .combatFrame {
@@ -39,17 +35,20 @@
   }
 
   .icon {
-    @apply bg-blue border-2 border-beige rounded-2xl p-2 w-[60px] bg-opacity-60;
+    @apply bg-blue border-2 border-beige rounded-2xl p-2 w-[45px] lg:w-[60px] bg-opacity-60;
   }
-}
 
-.hp-bar {
-  width: 100%;
-  height: 30px;
-  background-color: black;
-  border: 1px solid #000;
-  border-radius: 5px;
-  overflow: hidden;
+  .hp-bar {
+    @apply w-full h-[20px] lg:h-[30px] bg-black border-2 border-black rounded-md overflow-hidden;
+  }
+
+  .hp-bar-text {
+    @apply font-Courier font-bold text-xs lg:text-xl text-white;
+  }
+
+  .InformationUI {
+    @apply right-0 absolute w-full max-w-[600px] z-40 h-auto;
+  }
 }
 
 .tools {
