--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
   }
 
   .combatFrame {
-    @apply border-8 border-spacing-5;
+    @apply border-4 lg:border-8 border-spacing-5;
   }
 
   .icon {
@@ -48,6 +48,10 @@
 
   .InformationUI {
     @apply right-0 absolute w-full max-w-[600px] z-40 h-auto;
+  }
+
+  .combatBox {
+    @apply flex flex-col max-w-[150px] md:max-w-[300px] lg:max-w-[400px];
   }
 }
 
